--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-h1{
-  color: red;
+.navbar-default .navbar-brand{
+  color: black;
+}
+.navbar-header {
+    text-align: center;
+    width: 100%;
+}
+.navbar-default .navbar-nav > li > a{
+  color: black;
+}
+.navbar-brand {
+  float:none;
+}
+
+.navbar-text{
+  float:none;
+}
+
+
+.navbar-header h1{
+  font-size: 50px;
+  color: black;
 }
