--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,88 @@
-h1{
-  color: red;
+body { padding-top: 19%; }
+
+
+.navbar-default .navbar-brand{
+  color: black;
+}
+.navbar-header {
+    text-align: center;
+    width: 100%;
+}
+.navbar-default .navbar-nav > li > a{
+  color: black;
+}
+.navbar-brand {
+  float:none;
+}
+
+.navbar-text{
+  float:none;
+}
+
+
+.navbar-header h1{
+  font-size: 50px;
+  color: black;
+}
+
+.container{
+  margin-top: 1%;
+}
+
+hr.style1{
+	border-top: 5px solid black;
+  width: 75%;
+  margin-top: 9%;
+  margin-bottom: 7%;
+}
+
+
+#myCarousel .carousel-caption {
+    left:0;
+	right:0;
+	bottom:0;
+	text-align:left;
+	padding:10px;
+	background:rgba(0,0,0,0.6);
+	text-shadow:none;
+}
+
+#myCarousel .list-group {
+	position:absolute;
+	top:0;
+	right:0;
+}
+#myCarousel .list-group-item {
+	border-radius:0px;
+	cursor:pointer;
+}
+#myCarousel .list-group .active {
+	background-color:#eee;
+}
+
+
+.news .thumbnail{
+
+  display:block;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  max-width: 350px;
+}
+
+@media (min-width: 992px) {
+	#myCarousel {padding-right:33.3333%;}
+	#myCarousel .carousel-controls {display:none;}
+}
+@media (max-width: 991px) {
+	.carousel-caption p,
+	#myCarousel .list-group {display:none;}
+}
+
+@media screen and (max-width: 768px) {
+    body { padding-top: 100px; }
+}
+
+@media screen and (min-width: 768px) {
+    body { padding-top: 220px; }
 }
