--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,14 @@ footer{
   background-color: black;
   margin-top: 5%;
   text-align: center;
+}
+
+.video-page{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  height: auto;
 
 }
 
